我的个人博客系统

--- a/src/main/resources/templates/back/main.html
+++ b/src/main/resources/templates/back/main.html
@@ -49,14 +49,23 @@
               <td>服务器软件:</td>
               <td>Apache Tomcat8.0</td>
             </tr>
-     
+
             <tr>
               <td>登录者IP:</td>
               <td>${(ip)!}</td>
              <td>登录时间:</td>
               <td>${(logintime)!}</td>
             </tr>
-    
+
+            <tr>
+                <td>会话id:</td>
+                <td>${(userinfo.userMark)!}</td>
+            </tr>
+
+            <tr>项目ip和端口号:</td>
+                <td>${(userinfo.userPhone)!}</td>
+            </tr>
+
           </tbody>
           <tfoot>
             <tr></tr>
