我的个人博客系统

--- a/src/main/resources/templates/back/main.html
+++ b/src/main/resources/templates/back/main.html
@@ -62,10 +62,10 @@
                 <td>${(userinfo.userMark)!}</td>
             </tr>
 
-            <tr>项目ip和端口号:</td>
+          <!--  <tr>项目ip和端口号:</td>
                 <td>${(userinfo.userPhone)!}</td>
             </tr>
-
+-->
           </tbody>
           <tfoot>
             <tr></tr>
